k8s/apps/router/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: router
spec:
  selector:
    app: router-proxy
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
