k8s/apps/router/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-ingress
  namespace: router
spec:
  podSelector: {}
  policyTypes: [Ingress]
  ingress:
    - from:
        - ipBlock: { cidr: 10.42.0.0/16 }
        - ipBlock: { cidr: 192.168.1.10/32 }
        - ipBlock: { cidr: 192.168.1.11/32 }
      ports:
        - { protocol: TCP, port: 8080 }
